--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,8 @@
   --hover-color: #4D5AE5;
   --click-color:#404BBF;
   --button-color:#9747FF;
-  
+  --cloud-color:#F4F4FD;
+  --nav-color:#2E2F42;
   }
 /* roboto-regular - latin */
 @font-face {
@@ -69,12 +70,13 @@ html{
   box-sizing: inherit;
 }
 body{
-  font-family:'Roboto'; 
-  font-style: normal;
+  width: 1440px;
+  height: 2593px;
+  font-family:'Roboto', sans-serif;
+  font-style: Regular;
   font-size:  16px;
-  font-weight:normal;
   line-height: 1.2;
-  color:#434455 ;
+  color:var(--title-text-color);
   background-color :var(--primary-text-color);
   }
 .wrapper{
@@ -85,10 +87,11 @@ body{
   background-color: #fff;
 }
 .header-wrapper{
+  width: 1440px;
+  height: 72px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-}
+  }/*justify-content: space-between;*/
 /*--logo--*/
 .header-logo .logo {
   font-family: 'Raleway',sans-serif;
@@ -98,56 +101,95 @@ body{
   letter-spacing: 0.03em;
   margin: 44px 0px 71px 24px;
   text-decoration: none;
-  color:#2E2F42;
+  color:var(--nav-color);
 }
-.header-logo .web {
-  font-family: 'Raleway',sans-serif;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.33;
-  letter-spacing: 0.03em;
-  margin: 0px 0px 44px 24px;
-  text-decoration: none;
-  color:#4D5AE5;
+
+span {
+    font-family: 'Raleway',sans-serif;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    margin: 0px 0px 44px 24px;
+    text-decoration: none;
+    color:var(--hover-color);
+}
+.header-logo .link {
+  color:var(--nav-color) ;
+}
+.header-logo .link .web {
+  color:var(--hover-color);
+}
+.header-logo.link:hover,
+.header-logo.link:focus{
+color:var(--hover-color);
 }
 .header-list{
   display: flex;
   flex-wrap: wrap;
 }
-.header-item{
+.header-item {
+  font-weight: 600px;
+  font-size: 16px;
+  line-height: 1.5;
   margin-right: 15px;
-  color:#2E2F42 ;
-}
-.header-item:last-child{
-  margin-right: 0;
-}
-/* Навигация */
-.logo-link {
-  color:#2E2F42 ;
-}
-.logo .web {
-  color:#4D5AE5;
-}
-.list {
-  list-style: none;
+  color:var(--nav-color);
 }
 .header-item:hover,
 .header-item:focus{ 
-  color:#4D5AE5 ;
+  color:var(--hover-color);
+}
+  .header-list .link-current{
+    color:var(--hover-color);
+}
+.connection-list .connection-item {
+  display: inline-block;
+}
+/*.header-list .header-item {
+  display:inline-block;
+   color:var(--nav-color);
+ }*/
+.header-item:last-child{
+  margin-right: 0;
+}
+.header-item .link-current:hover,
+.header-item .link-current:focus{ 
+  color:var(--accent-color) ;
+}
+.header-item .link:hover,
+.header-item .link:focus{ 
+  color:var(--accent-color) ;
+}
+/* Навигация */
+/*.header-nav {}*/
+ul {
+  list-style: none;
 }
 /* Заглавия */
-.section-hero {
+.hero {
   background-color:#2E2F42 ;
 }
 .hero-title {
-  display:none;
-}
+  color:var(--primary-text-color);
+  }
 /* Секции */
 .section-title {
+  color: #2E2F42;
+}
+.policy-list .title {
+color:#2E2F42;
+}
+.policy-list .title-text {
+ color:var(--title-text-color); 
+}
+.team-list .team-title{
+  color: var(--title-text-color);
+}
+h2 {
   display: none;
 }
 .section-title >h3 {
-color:#2E2F42;
+color:var(--nav-color);
 }
 .section-title >p {
  color:var(--title-text-color); 
@@ -199,16 +241,18 @@ Light
   align-items: flex-start;
   padding: 16px 32px;
   gap: 10px;
-  position: absolute;
   width: 170px;
   height: 51px;
   left: 635px;
   top: 432px;
-  color: #F4F4FD;
-  background-color:#4D5AE5
-}
+  color:#4D5AE5;
+  background-color: #F4F4FD;
+  }
 
 .btn {
+  font-style: Semi Bold;
+  color:var(--hover-color);
+  border-radius: 4px;
   border: none;
   padding: 0.25rem 1.25rem;
 }
