--- a/css/styles.css
+++ b/css/styles.css
@@ -245,8 +245,8 @@ Light
   height: 51px;
   left: 635px;
   top: 432px;
-  color:#4D5AE5;
-  background-color: #F4F4FD;
+  color:#F4F4FD;
+  background-color:#4D5AE5;
   }
 
 .btn {
