--- a/css/styles.css
+++ b/css/styles.css
@@ -73,9 +73,11 @@ body{
   width: 1440px;
   height: 2593px;
   font-family:'Roboto', sans-serif;
+  font-weight: 400;
   font-style: Regular;
   font-size:  16px;
   line-height: 1.2;
+  letter-spacing: 0.02em;
   color:var(--title-text-color);
   background-color :var(--primary-text-color);
   }
@@ -114,6 +116,7 @@ span {
     text-decoration: none;
     color:var(--hover-color);
 }
+
 .header-logo .link {
   color:var(--nav-color) ;
 }
@@ -166,6 +169,7 @@ color:var(--hover-color);
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  color:var(--title-text-color);
 }
 ul {
   list-style: none;
@@ -175,28 +179,52 @@ ul {
   background-color:#2E2F42 ;
 }
 .hero-title {
+  font-weight: 600;
+  font-size: 56px;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
   color:var(--primary-text-color);
  }
  .hero .button {
   cursor: pointer;
   width: 170px;
   height: 51px;
-  color:#F4F4FD;
+  font-family: inherit;
+  font-size: 16px;
+  line-height: 1.19;
+  letter-spacing: 0.04em;
+  color:var(--primary-text-color);
   background-color:#4D5AE5;
   border-radius: 4px;
   }
+
 /* Секции */
 .section-title {
-  color: #2E2F42;
-}
+  font-family: inherit;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  color:var(--nav-color);
+}    
+
 .policy-list .title {
-color:var(--nav-color);
+  font-family: inherit;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.19;
+  letter-spacing: 0.04em;
+  color:var(--nav-color);
 }
 .policy-list .title-text {
- color:var(--title-text-color); 
+  color:var(--title-text-color); 
 }
 .team-list .team-title{
-  color: var(--title-text-color);
+  font-family: inherit;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.19;
+  letter-spacing: 0.02em;
+  color: var(--nav-color);
 }
 h2 {
   display: none;
@@ -208,10 +236,18 @@ color:var(--nav-color);
  color:var(--title-text-color); 
 }
 .footer {
-  background-color: #2E2F42;
+  background-color:var(--nav-color);
+}
+.footer .logo {
+  font-family: Raleway;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  color: var(--cloud-color);
 }
 .footer-text {
-  color:#434455 ;
+  color:var(--accent-color) ;
 }
 .subtitle {
   background-color: var(--accent-text-color);
@@ -263,7 +299,7 @@ Light
   background-color: #F4F4FD;
   border-radius: 4px;
   border: 1px solid #E7E9FC;
-  padding: 0.25rem 1.25rem;
+  padding: 8px  16px;
 }
 .btn.active {
   width: 69px;
@@ -271,6 +307,7 @@ Light
   color:#F4F4FD;
   background-color: #4D5AE5;
   border-radius: 4px;
+  padding: 8px 16px;
 }
 .button .btn {
   cursor: pointer;
