--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,7 @@ body{
   height: 2593px;
   font-family:'Roboto', sans-serif;
   font-weight: 400;
-  font-style: Regular;
+  font-style: normal;
   font-size:  16px;
   line-height: 1.2;
   letter-spacing: 0.02em;
@@ -165,7 +165,7 @@ color:var(--hover-color);
 .header-item .link:focus{ 
   color:var(--accent-color) ;
 }
-.connection-item {
+.connection-item  {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -216,6 +216,11 @@ ul {
   color:var(--nav-color);
 }
 .policy-list .title-text {
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
   color:var(--title-text-color); 
 }
 .team-list .team-title {
@@ -226,15 +231,24 @@ ul {
   letter-spacing: 0.02em;
   color: var(--nav-color);
 }
-h2 {
-  display: none;
+.imajes h3 {
+  font-family: inherit;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.19;
+  letter-spacing: 0.04em;
+  color:var(--nav-color);
 }
-.section-title >h3 {
-color:var(--nav-color);
+.imajes p {
+  font-family: inherit;
+  font-weight:400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color:var(--title-text-color);
 }
-.section-title >p {
- color:var(--title-text-color); 
-}
+
+
 .footer {
   background-color:var(--nav-color);
 }
@@ -247,11 +261,13 @@ color:var(--nav-color);
   color: var(--cloud-color);
 }
 .footer-text {
+  font-family: inherit;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
   color:var(--accent-color) ;
 }
-.subtitle {
-  background-color: var(--accent-text-color);
-}
+
 ul {
   list-style: none;
 }
@@ -294,20 +310,29 @@ Light
 .btn {
   width: 116px;
   height: 48px;
-  font-style: Semi Bold;
+  font-family: inherit;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   color:var(--hover-color);
   background-color: #F4F4FD;
   border-radius: 4px;
   border: 1px solid #E7E9FC;
-  padding: 8px  16px;
+  padding: 12px  24px;
 }
 .btn.active {
   width: 69px;
   height: 48px;
-  color:#F4F4FD;
+  font-family: inherit;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color:#FFFFFF;
   background-color: #4D5AE5;
   border-radius: 4px;
-  padding: 8px 16px;
+  padding: 12px 24px;
 }
 .button .btn {
   cursor: pointer;
